1 ¿Qué necesitas para aprender React.js?

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,15 @@ yarn-error.log*
 
 # vscode
 .vscode
+
+# IDE/editor
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
